# skeleton-vuejs

./: .gitignore  README.md  commands.py  debugger.ipynb  pyproject.toml  vuejs.code-workspace
api/: application.py  auth.py  crud.py  models.py
api/config/: logs.py
api/database/: todos.json  users.json
frontend/: .env.development  .eslintignore  .eslintrc.cjs  .eslintrc.js  .prettierrc.json  README.md  env.d.ts  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.vite-config.json  tsconfig.vite.json  vite.config.ts
frontend/@types/: shims-vue.d.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: crud.ts  endpoints.ts  httpClient.ts
frontend/src/components/: ToDoList.vue
frontend/src/components/__tests__/: HelloWorld.spec.ts
frontend/src/components/authentication/: Authenticate.vue  ForgetPassword.vue  Login.vue  RegisterUser.vue  Registration.vue  Unauthenticate.vue
frontend/src/components/examples/: DarkModeSwitch.vue  HeroIcons.vue  HeroPatterns.vue  TypeScriptTutorial.vue  Typography.vue
frontend/src/components/generics/: Content.vue  Footer.vue  Header.vue  Loading.vue  LoadingComponent.vue  Logo.vue  (+2 more)
frontend/src/pages/: About.vue  AboutPage.vue  Home.vue  HomePage.vue  Imprint.vue  ImprintPage.vue  Login.vue  LoginPage.vue  Logout.vue  LogoutPage.vue  NotFound.vue  NotFoundPage.vue  RegistrationPage.vue  TutorialPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: application.ts  auth.ts  cookies.ts  todos.ts
frontend/src/styles/: main.scss  variables.scss
