[tool.poetry]
name = "vuejs-skeleton"
version = "0.1.0"
description = "providing a basic vuejs application to start your projects with a simple skeleton"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
typer = "^0.4.0"
humanize = "^4.0.0"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
