[tool.poetry]
name = "vuejs-skeleton"
version = "0.1.0"
description = "providing a basic vuejs application to start your projects with a simple skeleton"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
typer = "^0.4.0"
humanize = "^4.0.0"
rich = "^11.2.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
